--- a/src/DSInventorNodes/DSInventorNodes.csproj
+++ b/src/DSInventorNodes/DSInventorNodes.csproj
@@ -73,6 +73,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\InvApplication.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="API\InvAssemblyComponentDefinition.cs" />
     <Compile Include="API\InvAssemblyComponentDefinitions.cs" />
     <Compile Include="API\InvAssets.cs" />
@@ -115,7 +118,6 @@
     <Compile Include="API\InvUnitsOfMeasure.cs" />
     <Compile Include="API\InvViews.cs" />
     <Compile Include="API\Inv_DocPerformanceMonitor.cs" />
-    <Compile Include="Application\InvApplication.cs" />
     <Compile Include="Containers\ComponentOccurrencesContainer.cs" />
     <Compile Include="API\InvAssemblyDocument.cs" />
     <Compile Include="API\InvDocuments.cs" />
@@ -134,6 +136,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TempNodes\Bools.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DSCoreNodes\DSCoreNodes.csproj">
@@ -157,7 +160,9 @@
       <Name>InventorServices</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Application\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
