--- a/src/DSInventorNodes/DSInventorNodes.csproj
+++ b/src/DSInventorNodes/DSInventorNodes.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\EnumExtensions.cs" />
     <Compile Include="API\InvApplication.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -84,6 +85,7 @@
     <Compile Include="API\InvAttributeSets.cs" />
     <Compile Include="API\InvCommandIDEnum.cs" />
     <Compile Include="API\InvCommandTypesEnum.cs" />
+    <Compile Include="API\InvComponentDefinitions.cs" />
     <Compile Include="API\InvDisabledCommandList.cs" />
     <Compile Include="API\InvDisplaySettings.cs" />
     <Compile Include="API\InvDocument.cs" />
