--- a/src/DSInventorNodes/DSInventorNodes.csproj
+++ b/src/DSInventorNodes/DSInventorNodes.csproj
@@ -85,6 +85,7 @@
     <Compile Include="API\InvAttributeSets.cs" />
     <Compile Include="API\InvCommandIDEnum.cs" />
     <Compile Include="API\InvCommandTypesEnum.cs" />
+    <Compile Include="API\InvComponentDefinition.cs" />
     <Compile Include="API\InvComponentDefinitions.cs" />
     <Compile Include="API\InvDisabledCommandList.cs" />
     <Compile Include="API\InvDisplaySettings.cs" />
