--- a/src/InventorServices/InventorServices.csproj
+++ b/src/InventorServices/InventorServices.csproj
@@ -51,6 +51,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\TupleList.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DSNodeServices\DSNodeServices.csproj">
+      <Project>{ef879a10-041d-4c68-83e7-3192685f1bae}</Project>
+      <Name>DSNodeServices</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
