Create abstract class InventorObject to hold instance ReferenceKey objects.  Classes representing non-brep objects will inherit from InventorObject.

--- a/src/Libraries/Inventor/DSInventorNodes/DSInventorNodes.csproj
+++ b/src/Libraries/Inventor/DSInventorNodes/DSInventorNodes.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\InventorObject.cs" />
     <Compile Include="API\DocumentExtensions.cs" />
     <Compile Include="API\EnumExtensions.cs" />
     <Compile Include="API\InvApplication.cs">
