--- a/src/Libraries/Inventor/InventorServices/InventorServices.csproj
+++ b/src/Libraries/Inventor/InventorServices/InventorServices.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Persistence\InventorPersistenceManager.cs" />
     <Compile Include="Persistence\ReferenceKeyBinder.cs" />
+    <Compile Include="Persistence\ReferenceKeyBinderModule.cs" />
     <Compile Include="Persistence\ReferenceManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\TupleList.cs" />
