--- a/src/Libraries/Inventor/InventorServices/InventorServices.csproj
+++ b/src/Libraries/Inventor/InventorServices/InventorServices.csproj
@@ -36,6 +36,12 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>$(INVENTORAPI)\Autodesk.Inventor.interop.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleInjector">
+      <HintPath>..\..\..\packages\SimpleInjector.2.5.0\lib\net40-client\SimpleInjector.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleInjector.Diagnostics">
+      <HintPath>..\..\..\packages\SimpleInjector.2.5.0\lib\net40-client\SimpleInjector.Diagnostics.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,16 +51,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Persistence\IContextArray.cs" />
-    <Compile Include="Persistence\IContextIndexer.cs" />
-    <Compile Include="Persistence\IContextManager.cs" />
-    <Compile Include="Persistence\InventorPersistenceManager.cs" />
-    <Compile Include="Persistence\IObjectBinder.cs" />
-    <Compile Include="Persistence\IObjectKey.cs" />
-    <Compile Include="Persistence\ModuleContextIndexer.cs" />
+    <Compile Include="Interfaces\AbstractId.cs" />
+    <Compile Include="Interfaces\IContextArray.cs" />
+    <Compile Include="Interfaces\IContextIndexer.cs" />
+    <Compile Include="Interfaces\IContextManager.cs" />
+    <Compile Include="Interfaces\IObjectKey.cs" />
+    <Compile Include="Interfaces\ISerializableId.cs" />
+    <Compile Include="Interfaces\ISerializableIdManager.cs" />
+    <Compile Include="Persistence\ModuleContextArray.cs" />
+    <Compile Include="Persistence\ModuleIdManager.cs" />
+    <Compile Include="Persistence\ModuleReferenceKeyBinder.cs" />
+    <Compile Include="Persistence\PersistenceManager.cs" />
+    <Compile Include="Interfaces\IObjectBinder.cs" />
+    <Compile Include="Interfaces\ITestInterface.cs" />
+    <Compile Include="Persistence\ModuleContextManager.cs" />
     <Compile Include="Persistence\ReferenceKeyBinder.cs" />
     <Compile Include="Persistence\ReferenceKeyBinderModule.cs" />
     <Compile Include="Persistence\ReferenceManager.cs" />
+    <Compile Include="Persistence\TestImplementation.cs" />
+    <Compile Include="Persistence\TestUserClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\TupleList.cs" />
   </ItemGroup>
@@ -63,6 +78,9 @@
       <Project>{ef879a10-041d-4c68-83e7-3192685f1bae}</Project>
       <Name>NodeServices</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
