--- a/src/Libraries/Inventor/DSInventorNodes/InventorLibrary.csproj
+++ b/src/Libraries/Inventor/DSInventorNodes/InventorLibrary.csproj
@@ -128,10 +128,14 @@
     <Compile Include="API\InvDocuments.cs" />
     <Compile Include="API\InvPartDocument.cs" />
     <Compile Include="GeometryConversion\ConversionExtensions.cs" />
+    <Compile Include="ModulePlacement\IModules.cs" />
+    <Compile Include="ModulePlacement\IPointsList.cs" />
+    <Compile Include="ModulePlacement\ModuleIoC.cs" />
     <Compile Include="ModulePlacement\ModuleOldDelete.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ModulePlacement\Module.cs" />
+    <Compile Include="ModulePlacement\ModulePoints.cs" />
     <Compile Include="ModulePlacement\Modules.cs" />
     <Compile Include="ModulePlacement\ModuleUtilities.cs" />
     <Compile Include="ModulePlacement\OccurrenceList.cs">
