--- a/src/Libraries/Inventor/InventorServices/InventorServices.csproj
+++ b/src/Libraries/Inventor/InventorServices/InventorServices.csproj
@@ -57,20 +57,21 @@
     <Compile Include="Interfaces\IObjectBinder.cs" />
     <Compile Include="Interfaces\ISerializableId.cs" />
     <Compile Include="Interfaces\ISerializableIdManager.cs" />
+    <Compile Include="Interfaces\ISerializableModuleIdManager.cs" />
     <Compile Include="Persistence\ModuleContextArray.cs" />
     <Compile Include="Persistence\ModuleId.cs" />
     <Compile Include="Persistence\ModuleIdManager.cs" />
     <Compile Include="Persistence\ModuleObject.cs" />
     <Compile Include="Persistence\ModuleReferenceKeyBinder.cs" />
     <Compile Include="Persistence\ObjectId.cs" />
+    <Compile Include="Persistence\ObjectIdManager.cs" />
     <Compile Include="Persistence\PersistenceManager.cs" />
     <Compile Include="Interfaces\IModuleBinder.cs" />
     <Compile Include="Interfaces\ITestInterface.cs" />
     <Compile Include="Persistence\ModuleContextManager.cs" />
-    <Compile Include="Persistence\ReferenceKeyBinder.cs" />
     <Compile Include="Persistence\ReferenceKeyBinderModule.cs" />
     <Compile Include="Persistence\ReferenceManager.cs" />
-    <Compile Include="Persistence\ReferenecKeyBinder2.cs" />
+    <Compile Include="Persistence\ReferenecKeyBinder.cs" />
     <Compile Include="Persistence\TestImplementation.cs" />
     <Compile Include="Persistence\TestUserClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
