--- a/src/DynamoInventor/DynamoInventor.csproj
+++ b/src/DynamoInventor/DynamoInventor.csproj
@@ -184,6 +184,10 @@
       <Project>{8b38bbc0-9277-458f-8bb3-ee7b2e0e2b3f}</Project>
       <Name>InventorServices %28Libraries\Inventor\InventorServices\InventorServices%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Libraries\IronPython\IronPythonUI.csproj">
+      <Project>{01de9b06-0bcb-4d8a-862e-e8170f5d6b4f}</Project>
+      <Name>IronPythonUI</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NodeServices\NodeServices.csproj">
       <Project>{ef879a10-041d-4c68-83e7-3192685f1bae}</Project>
       <Name>NodeServices</Name>
