--- a/src/Libraries/Inventor/DSInventorNodes/InventorLibrary.csproj
+++ b/src/Libraries/Inventor/DSInventorNodes/InventorLibrary.csproj
@@ -63,7 +63,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API\InventorObject.cs" />
     <Compile Include="API\DocumentExtensions.cs" />
     <Compile Include="API\EnumExtensions.cs" />
     <Compile Include="API\InvApplication.cs">
@@ -171,6 +170,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Autodesk.Inventor.interop.xml" />
+    <Content Include="InventorLibrary_DynamoCustomization.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
